syntax = "proto3";

package postNotification;

service NotificationService {
    rpc TagNotification(TagNotificationRequest) returns (TagNotificationResponse) {};
}

message TagNotificationRequest {
  string userId = 1;
  string username = 2;
  string postId = 3;
  repeated string TagedUserIds = 4;
  string postUrl = 5;
}

message TagNotificationResponse {
    string message = 1;
    bool success = 2;
}

