syntax = "proto3";

package userNotification;

service UserService {
  rpc CreateUserNotification(CreateUserRequest) returns (UserResponse) {}
  rpc Follow(FollowRequest) returns (UserResponse) {}
}

message CreateUserRequest {
    string userId = 1;
    string userName = 2;
}

message FollowRequest {
  string userId = 1;
  string userName = 2;
  string targetId = 3;
  bool type = 4;
}

message UserResponse {
    string message = 1;
    string status = 2;
}
